# LynBot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pom.xml  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  docker-image.yml
src/: __init__.py  bot.py  config.py  constants.py  errors.py  log.py  utils.py
src/cogs/epicgames/: app.py  setup.py
src/cogs/gpt/: app.py  config.py  setup.py
src/cogs/myanimelist/: app.py  constants.py  setup.py  utils.py
src/main/java/com/kim/discordbot/: Bot.java
src/main/java/com/kim/discordbot/cogs/: BotCogs.java  GPTCogs.java
src/main/java/com/kim/discordbot/core/: BotCore.java  CommandManager.java  CommandRegistry.java
src/main/java/com/kim/discordbot/core/commands/: Cog.java  CommandManager.java  CommandProcessor.java  CommandRegistry.java  ContextCommand.java  SlashCommand.java  SlashCommandContext.java
src/main/java/com/kim/discordbot/core/database/: BotConfig.java  ConfigManager.java
src/main/java/com/kim/discordbot/core/listeners/: SlashCommandInteractionListener.java
src/main/java/com/kim/discordbot/core/thread/: ThreadController.java
src/main/java/com/kim/discordbot/util/: BotLogger.java  Config.java  Util.java
src/main/java/io/github/lynbean/lynbot/: Bot.java
src/main/java/io/github/lynbean/lynbot/cogs/: BotCogs.java  EpicGamesCogs.java  (+1 more)
src/main/resources/: application.properties  reference.conf  reference.properties
src/main/resources/cogs/: gpt.properties
(+104 files in other folders)
