[tool.poetry]
name = "repl_nix_Yor"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
discord = "^2.1.0"
loguru = "^0.6.0"
openai = "^0.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
